crux-mir/test/symb_eval/concretize/assert_refs.good
test assert_refs/<DISAMB>::crux_test[0]: [Crux] Attempting to prove verification conditions.
FAILED

failures:

---- assert_refs/<DISAMB>::crux_test[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:49:13: 56:14 !test/symb_eval/concretize/assert_refs.rs:12:5: 12:67: error: in assert_refs/<DISAMB>::crux_test[0]
[Crux]   MIR assertion at test/symb_eval/concretize/assert_refs.rs:12:5:
[Crux]   	42 42 [42] [42]
[Crux]   Context:
[Crux]     internal: _start

[Crux-MIR] ---- FINAL RESULTS ----
[Crux] Goal status:
[Crux]   Total: 1
[Crux]   Proved: 0
[Crux]   Disproved: 1
[Crux]   Incomplete: 0
[Crux]   Unknown: 0
[Crux] Overall status: Invalid.
